--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html manifest="nano.manifest" >
+<html manifest="metropol.manifest" >
 <head>
     <title>Auto GoldHEN Host</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
